--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,3 +1,16 @@
 <ion-view title="Homepage">
-    
+    <ion-nav-buttons side="left">
+        <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+    </ion-nav-buttons>
+
+
+    <ion-content class="has-header">
+        
+        <div class="row">
+            <div class="col" ng-repeat="tag in tags" href="#/app/home/{{tag.id}}">
+                {{tag.title}}
+            </div>
+        </div>
+
+    </ion-content>
 </ion-view>
